linked favicon from remote repo

--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -16,7 +16,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/video.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bikes.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/modals.css' %}">
-      <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
+      <link rel="icon" type="image/png" href="https://i.ibb.co.com/R0Sh9Pf/favicon.png">
       <link href="{% static 'dist/css/lightbox.css' %}" rel="stylesheet" />
       {% if YANDEX_VERIFICATION_ID %}
         <meta name="yandex-verification" content="{{ YANDEX_VERIFICATION_ID }}" />
