--- a/btr/templates/emails/email_base.html
+++ b/btr/templates/emails/email_base.html
@@ -265,10 +265,10 @@
                                         {% translate 'Booking' %} #{{ pk }} {% translate 'was edited' %}
                                     </h2>
                                     <p style="margin: 0;padding: 20px 20px 20px 20px;font-size: 18px;color: #1C1E23;">
-                                        {% translate 'We have adjusted your rental booking details.' %}.
+                                        {% translate 'We have adjusted your rental booking details.' %}
                                     </p>
                                     <p style="margin: 0;padding: 0 20px 20px 20px;font-size: 18px;color: #1C1E23;">
-                                        <em>{% translate 'If you are not satisfied with the new time or date, you can cancel your appointment, or contact us on social networks or by phone' %}:</em>
+                                        <em>{% translate 'If you are not satisfied with the new time or date, you can cancel your appointment, or contact us on social networks or by phone' %}</em>
                                     </p>
                                 </td>
                             </tr>
