--- a/btr/templates/base.html
+++ b/btr/templates/base.html
@@ -4,7 +4,7 @@
     {% load django_bootstrap5 i18n static contrib_extras %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <meta name="description" content="{% translate 'We are a team of professional enduro riders, we rent and teach proper riding techniques on our motorcycles. You can book a ride from our site or via TG bot easily.' %}">
+    <meta name="description" content="{% translate 'We are a team of professional enduro riders, we rent and teach proper riding techniques on our motorcycles' %}">
     <meta name="keywords" content="{% translate 'motorcycles rental, bike rental, enduro, enduro spb, pit bike spb' %}">
       <title>{{ title }}</title>
       {% bootstrap_css %}
@@ -18,6 +18,14 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/modals.css' %}">
       <link rel="icon" type="image/png" href="https://i.ibb.co.com/R0Sh9Pf/favicon.png">
       <link href="{% static 'dist/css/lightbox.css' %}" rel="stylesheet" />
+      <!-- Open Graph tags -->
+      <meta property="og:title" content="{% block og_title %}{% translate 'Enduro bikes rental in Saint-Petersburg' %}{% endblock og_title %}" />
+      <meta property="og:type" content="{% block og_type %}website{% endblock og_type %}" />
+      <meta property="og:image" content="{% block og_image %}{% static 'images/og-image.jpg' %}{% endblock og_image %}" />
+      <meta property="og:description" content="{% block og_description %}{% translate 'We teach and rent Enduro bycycles in Saint-Petersburg. All safety equipment included in rental price. No driver license needed, Welcome!' %}{% endblock og_description %}" />
+      <meta property="og:locale" content="{{ LANGUAGE_CODE }}" />
+      <meta property="og:locale:alternate" content="en-us" />
+      <!-- End Open Graph -->
       {% if YANDEX_VERIFICATION_ID %}
         <meta name="yandex-verification" content="{{ YANDEX_VERIFICATION_ID }}" />
       {% endif %}
