--- a/btr/templates/video.html
+++ b/btr/templates/video.html
@@ -5,6 +5,6 @@
         <div class="tv-ram">
             <img alt="frame" src="{% static 'images/notebook.png' %}">
         </div>
-        <div data-video="zHs_ivENQpU" class="tv-video"></div>
+        <div data-video="7pR5jm6IAIU" class="tv-video"></div>
     </div>
 </div>
